Fixes vertical alignment on Firefox

--- a/style/less/site.less
+++ b/style/less/site.less
@@ -725,6 +725,7 @@ textarea {
 .word {
 	display: inline-flex;
 	overflow: hidden;
+	vertical-align: top;
 }
 
 .char {
